--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,6 @@
+$orange: #e67e22;
+$orange-overlay: rgba(230, 126, 34, 0.8);
+
 body {
   overflow-x: hidden; /* WILL HIDE ANY SCROLL BARS ON THE X AXIS*/
 }
@@ -8,10 +11,14 @@ body {
 
 #hero-section {
   background-image: url("../img/me-with-kids.jpg");
-  min-height: 500px;
+  min-height: 100vh;
+  background-color: $orange-overlay;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  margin-top: 250px;
+
+  .dark-overlay {
+    background-color: $orange-overlay;
+  }
 }
 
 #homesection-1 img {
@@ -19,12 +26,17 @@ body {
   width: 300px;
 }
 
+#homesection-2 img {
+  height: 325px;
+  width: 325px;
+}
+
 #homesection-3 img {
   min-height: 200px;
 }
 
 #homesection-4 i {
-  min-height: 300px;
+  font-size: 200px;
 }
 
 #aboutsection-1 img {
