--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
 .nav-item {
   text-decoration: underline; }
 
+/* ----- HOME PAGE ----- */
 #hero-section {
   background-image: url("../img/me-with-kids.jpg");
   min-height: 100vh;
@@ -12,12 +13,23 @@ body {
   background-repeat: no-repeat;
   background-position: 0 -560px; }
 
-.dark-overlay {
-  background-color: rgba(230, 126, 34, 0.8); }
+#hero-section .dark-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7); }
 
+@media only screen and (max-width: 768px) {
+  #hero-section h4 {
+    font-size: 5rem; } }
 #homesection-1 button {
   background-color: #e67e22; }
 
+@media only screen and (max-width: 768px) {
+  #homesection-1 button {
+    margin-bottom: 25px; } }
 #homesection-1 img {
   height: 300px;
   width: 300px; }
@@ -29,6 +41,9 @@ body {
 #homesection-2 a {
   color: #e67e22; }
 
+#homesection-2 button:hover {
+  background-color: #fff; }
+
 #homesection-3 button {
   background-color: #e67e22; }
 
@@ -37,6 +52,9 @@ body {
 
 #homesection-4 a {
   color: #e67e22; }
+
+#homesection-4 button:hover {
+  background-color: #fff; }
 
 #homesection-4 i {
   font-size: 200px; }
@@ -47,5 +65,13 @@ body {
 
 #contact-section-1 i {
   font-size: 200px; }
+
+#skills-section-1 .paintbrush-img {
+  height: 300px; }
+
+/* ----- EXAMPLES PAGE ----- */
+@media only screen and (max-width: 768px) {
+  #examples-section-1 img {
+    height: 300px; } }
 
 /*# sourceMappingURL=style.css.map */
