--- a/css/bootstrap/_variables.scss
+++ b/css/bootstrap/_variables.scss
@@ -39,11 +39,11 @@ $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
 $pink: #e83e8c !default;
 $red: #dc3545 !default;
-$orange: #e67e22 !default;
+$orange: #6ae622 !default;
 $yellow: #ffc107 !default;
 $green: #28a745 !default;
 $teal: #20c997 !default;
-$cyan: #17a2b8 !default;
+$cyan: #2aa0a0 !default;
 
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
