--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,29 @@
 body {
-  overflow-x: hidden;
-  /* WILL HIDE ANY SCROLL BARS ON THE X AXIS*/ }
+  overflow-x: hidden; }
 
 .nav-item {
   text-decoration: underline; }
 
 /* ----- HOME PAGE ----- */
 #hero-section {
-  background-image: url("../img/me-with-kids.jpg");
-  min-height: 100vh;
-  background-attachment: fixed;
+  background: url(../img/me-with-kids.jpg);
   background-repeat: no-repeat;
-  background-position: 0 -560px; }
+  background-attachment: fixed;
+  min-height: 500px;
+  background-position: center -550px; }
 
+@media only screen and (max-width: 768px) {
+  #hero-section h4 {
+    font-size: 70px; } }
 #hero-section .dark-overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7); }
+  background: rgba(0, 0, 0, 0.7);
+  cursor: pointer; }
 
-@media only screen and (max-width: 768px) {
-  #hero-section h4 {
-    font-size: 5rem; } }
 #homesection-1 button {
   background-color: #e67e22; }
 
@@ -47,9 +47,16 @@ body {
 #homesection-3 button {
   background-color: #e67e22; }
 
+@media only screen and (max-width: 768px) {
+  #homesection-3 button {
+    margin-bottom: 20px; } }
 #homesection-3 img {
   min-height: 200px; }
 
+@media only screen and (max-width: 768px) {
+  #homesection-3 img {
+    max-height: 300px;
+    margin: auto; } }
 #homesection-4 a {
   color: #e67e22; }
 
@@ -70,6 +77,10 @@ body {
   height: 300px; }
 
 /* ----- EXAMPLES PAGE ----- */
+@media only screen and (max-width: 768px) {
+  #examples-section-1 img {
+    height: 300px; } }
+/* ----- CONTACT PAGE ----- */
 @media only screen and (max-width: 768px) {
   #examples-section-1 img {
     height: 300px; } }
