Cleaned up code a little bit

--- a/css/style.css
+++ b/css/style.css
@@ -11,23 +11,12 @@ body {
   background-attachment: fixed;
   background-size: cover;
   min-height: 500px;
-  background-position: center 20%; }
-
-#hero-section {
+  background-position: center 20%;
   text-shadow: 2px 2px 4px black; }
 
 @media only screen and (max-width: 768px) {
   #hero-section h4 {
     font-size: 70px; } }
-#hero-section .dark-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.7);
-  cursor: pointer; }
-
 #homesection-1 a {
   background-color: #e67e22; }
 
